license = "MIT"
license-files = [
    "LICENSE",
]

[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.VacateDefaultForeclosure"
version = "0.0.10"
description = "A docassemble extension."
readme = "README.md"
authors = [
    { name = "Vivian McNaughton", email = "vmcnaughton@illinoislegalaid.org" },
]
dependencies = []

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
